mdapi/objects/ltng_QuickLink__c.object
<CustomObject>
    <description>Links to allow people to get around the new Rome Experience quicker.</description>
    <label>Quick Link</label>
    <nameField>
        <label>Quick Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Links</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>(optional) Description is only shown in large contexts</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used in data loading and updates.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id for the icon.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IconGroup__c</fullName>
        <inlineHelpText>The Lightning Design System icon group.
https://www.lightningdesignsystem.com/icons/
Standard is used if not set.</inlineHelpText>
        <label>Icon Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>standard</fullName>
                </value>
                <value>
                    <fullName>custom</fullName>
                </value>
                <value>
                    <fullName>action</fullName>
                </value>
                <value>
                    <fullName>doctype</fullName>
                </value>
                <value>
                    <fullName>utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IconName__c</fullName>
        <description>List of all icons are available here:
https://www.lightningdesignsystem.com/icons/#standard</description>
        <inlineHelpText>Standard Lightning Icon name (or blank if no icon should be used):

https://www.lightningdesignsystem.com/icons</inlineHelpText>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <inlineHelpText>Name of the custom permission that is required for the user to see this link.</inlineHelpText>
        <label>Permission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredSortIndex__c</fullName>
        <inlineHelpText>Lowest number QuickLink appears at the top (those without towards the bottom)</inlineHelpText>
        <label>Preferred Sort Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Can be URL Schemes, partial urls, etc.</description>
        <inlineHelpText>Target address for the quick link.</inlineHelpText>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Please note that the Visualforce page can include URL Parameters.</description>
        <inlineHelpText>Whether the target is a Record Id, Visualforce page, URL, etc.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
                <value>
                    <fullName>Record</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PreferredSortIndex__c</columns>
        <columns>Type__c</columns>
        <columns>Permission__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>